# Pen-Plotter

./: .gitignore  Doxyfile  README.md  detect_circle_centers.py
Documentation/html/: annotated.html  classMoteusException_1_1MoteusCanError-members.html  classMoteusException_1_1MoteusCanError.html  classMoteusException_1_1MoteusCanError__coll__graph.dot  classMoteusException_1_1MoteusCanError__coll__graph.md5  classMoteusException_1_1MoteusCanError__inherit__graph.dot  classMoteusException_1_1MoteusCanError__inherit__graph.md5  classMoteusException_1_1MoteusException-members.html  classMoteusException_1_1MoteusException.html  classMoteusException_1_1MoteusException__coll__graph.dot  classMoteusException_1_1MoteusException__coll__graph.md5  classMoteusException_1_1MoteusException__inherit__graph.dot  classMoteusException_1_1MoteusException__inherit__graph.md5  classMoteusException_1_1MoteusPermissionsError.html  (+34 more)
Perception/: canny_hough_lessnaive.py  detect_circle_centers.py
ROS/controls/: CMakeLists.txt  package.xml  setup.py
ROS/controls/launch/: controls.launch  controls_simulation.launch
ROS/controls/msg/: CurrentMotorOrientation.msg  MotorOrientation.msg
ROS/controls/msgs/: MotorOrientation.msg  motor_orientation.msg
ROS/controls/src/: Moteus.py  MoteusException.py  controls_constants.py  main.cpp  moteus.py  moteus_wrapper.py  motor_descriptor.py  nuc_motor_controls.cpp  nuc_motor_controls.h  raspberry_controls.py
ROS/controls/src/Motors/: Moteus.py  MoteusException.py
ROS/controls/src/raspberrypi/: moteus.py  motor_descriptor.py  raspberry_controls.py
(+58 files in other folders)
